# advent-of-code-2025-in-C

day_1/: .gitignore  CMakeLists.txt
day_1/include/: dial.h  memory_arena.h
day_1/src/: dial.c  main.c
day_1/tests/: test.c
day_2/: .gitignore  CMakeLists.txt
day_2/src/: main.c
day_2/tests/: test.c
day_3/: .clang-tidy  CMakeLists.txt
day_3/src/: main.c
day_4/: .clang-tidy  .gitignore  CMakeLists.txt
day_4/src/: main.c
day_4/tests/: test.c
day_5/: CMakeLists.txt
day_5/include/: hashmap.h  helpers.h
day_5/src/: main.c
day_6/: CMakeLists.txt
day_6/include/: helpers.h
day_6/src/: main.c  main_part_2.c
day_7/: .clang-tidy  CMakeLists.txt
day_7/include/: dynamic_array.h  helpers.h
day_7/src/: main.c  main_part_2.c
day_7/tests/: test.c
